tuts hero working...

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -46,11 +46,11 @@
                 {% endif %}
 
                 <input type="text"
-                       class="form-control js-login-field-username"
+                       class="form-control js-login-field-email"
                        name="email"
                        value="{{ last_username }}"
                        required="required"
-                       placeholder="Username"
+                       placeholder="Email"
                 />
                 <input type="password"
                        class="form-control"
