--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,6 +9,7 @@
 {% block javascripts %}
     {{ parent() }}
 
+    <script src="{{ asset('build/vendors~app~login~rep_log.js') }}"></script>
     <script src="{{ asset('build/login.js') }}"></script>
 {% endblock %}
 
