--- a/templates/lift/index.html.twig
+++ b/templates/lift/index.html.twig
@@ -55,5 +55,5 @@
     {{ parent() }}
 
     <script src="https://cdn.jsdelivr.net/sweetalert2/6.1.0/sweetalert2.min.js"></script>
-    <script src="{{ asset('build/rep_log.js') }}"></script>
+    {{ encore_entry_script_tags('rep_log') }}
 {% endblock %}
