--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block stylesheets %}
     {{ parent() }}
 
-    <link rel="stylesheet" href="{{ asset('assets/css/login.css') }}" />
+    {{ encore_entry_link_tags('login') }}
 {% endblock %}
 
 {% block javascripts %}
