--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="wrapper">
             <form method="post" class="form-signin">
-                <h3><img class="dumbbell" src="{{ asset('assets/images/dumbbell.png') }}">Login! Start Lifting!</h3>
+                <h3><img class="dumbbell" src="{{ asset('build/dumbbell.png') }}" />Login! Start Lifting!</h3>
                 <div class="js-recommended-login">
                     <a href="#" class="js-show-login" title="Click for login details">Don't know the login?</a>
                     <div class="js-recommended-login-details" style="display: none;">
