Step 51: CSS: Font Awesome

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 @import '~bootstrap/dist/css/bootstrap.css';
+@import '~@fortawesome/fontawesome-free/css/all.css';
 
 body {
     font-family: 'Press Start 2P', cursive;
