Step 50: CSS: @import bootstrap

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
+@import '~bootstrap/dist/css/bootstrap.css';
 
 body {
     font-family: 'Press Start 2P', cursive;
