--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,3 +1,4 @@
+@import 'variables';
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '~@fortawesome/fontawesome-free/css/all.css';
@@ -49,7 +50,7 @@ footer.footer {
 }
 
 .leaderboard {
-    background-color: #FFDF00;
+    background-color: $yellow;
     padding: 10px;
     border-radius: 5px;
 }
