--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
-@import '~bootstrap/dist/css/bootstrap.css';
+@import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/css/all.css';
 
 body {
